# swayout

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
swayout/: __init__.py  __main__.py  libswayout.py  swayout.py
tests/: test_swayout.py
